Fix bug of html background colour overlapping images

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html, body {
 	padding: 0;	
 	font-family: "Fira Sans", sans-serif;
 	text-rendering: optimizeLegibility;
-	background-color: #000E17;
+	color: #000E17;
 }
 
 main {
